--- a/public/index.html
+++ b/public/index.html
@@ -9,11 +9,10 @@
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
   <link href="https://fonts.googleapis.com/css?family=Roboto+Mono|Roboto+Slab|Roboto:300,400,500,700"
     rel="stylesheet" />
-  <title>Devias Kit Pro</title>
-  <meta name="description"
-    content="A professional kit that comes with ready-to-use Material-UI© components developed with one common goal in mind, help you build faster &amp; beautiful applications. Each component is fully customizable, responsive and easy to integrate." />
+  <title>Dank Stocks</title>
+  <meta name="description" content="stock news and articles" />
   <meta name="keywords" content="react,material,kit,application,dashboard,admin,template" />
-  <meta name="author" content="Devias IO" />
+  <meta name="author" content="Isaac Summers" />
 </head>
 
 <body>
