--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,8 @@
   <meta name="description" content="stock news and articles" />
   <meta name="keywords" content="react,material,blog,stock,news,application,dashboard" />
   <meta name="author" content="Isaac Summers" />
+  <script src="https://cdn.broadstreetads.com/init-2.min.js"></script>
+  <script>broadstreet.loadNetworkJS(6996)</script>
 </head>
 
 <body>
