MVP 3, 4, Release 1 versions

--- a/public/index.html
+++ b/public/index.html
@@ -10,8 +10,9 @@
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
   <link href="https://fonts.googleapis.com/css?family=Roboto+Mono|Roboto+Slab|Roboto:300,400,500,700"
     rel="stylesheet" />
-  <title>Dank Stocks</title>
-  <meta name="description" content="stock news and articles" />
+  <title>Dankstocks | Stock Opinions and Analysis</title>
+  <meta name="description"
+    content="A place to give your opinion about stocks, the general market, and analyze company financials." />
   <meta name="keywords" content="react,material,blog,stock,news,application,dashboard" />
   <meta name="author" content="Isaac Summers" />
   <script src="https://cdn.broadstreetads.com/init-2.min.js"></script>
